--- a/dashboard/dbApp/dbApp.csproj
+++ b/dashboard/dbApp/dbApp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.2.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
   </ItemGroup>
 
 </Project>
