--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -1,13 +1,17 @@
 version: "3"
 
+networks:
+  tempsensor_network:
+    external: true
+
 services:
   db:
     image: mysql:8.0-debian
     container_name: mysqlTempDB
     restart: always
     # for testing
-    ports:
-      - 3306:3306
+    # ports:
+    #   - 3306:3306
     environment:
       - MYSQL_USER_FILE=/run/secrets/user_name
       - MYSQL_PASSWORD_FILE=/run/secrets/user_pw
@@ -20,6 +24,9 @@ services:
     volumes:
       - ./dbinit:/docker-entrypoint-initdb.d/:ro
       - ./dbfiles:/var/lib/mysql
+    networks:
+      tempsensor_network:
+        ipv4_address: 192.168.80.10
 
 secrets:
   user_name:
