--- a/dashboard/dashboard-docker-compose.yml
+++ b/dashboard/dashboard-docker-compose.yml
@@ -17,4 +17,4 @@ services:
     networks:
       tempsensor_network:
         ipv4_address: 192.168.80.12
-    command: "tail -f /dev/null"
+    restart: always
