--- a/dashboard/dashboard-docker-compose.yml
+++ b/dashboard/dashboard-docker-compose.yml
@@ -12,9 +12,22 @@ services:
     container_name: tempSensorDashboard
     environment:
       - TZ=Europe/London
-    ports:
-      - "8080:8080"
     networks:
       tempsensor_network:
         ipv4_address: 192.168.80.12
     restart: always
+
+  nginxproxy:
+    image: nginx:bookworm
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    depends_on:
+      - tempsensordashboard
+    environment:
+      - TZ=Europe/London
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      tempsensor_network:
+        ipv4_address: 192.168.80.13
