--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -1,12 +1,12 @@
 networks:
-  localdbnetwork:
+  tempsensor_network:
     external: true
 
 services:
   db:
     image: mysql:8.0-debian
     container_name: mysqlTempDB
-    # restart: always
+    restart: always
     # for testing
     ports:
       - 3306:3306
@@ -23,8 +23,8 @@ services:
       - ./dbinit:/docker-entrypoint-initdb.d/:ro
       - ./dbfiles:/var/lib/mysql
     networks:
-      - localdbnetwork
-        # ipv4_address: 192.168.80.10
+      tempsensor_network:
+        ipv4_address: 192.168.80.10
 
 secrets:
   user_name:
