--- a/dashboard/nginx/nginx.conf
+++ b/dashboard/nginx/nginx.conf
@@ -4,11 +4,16 @@ server {
 
     location / {
         proxy_pass http://192.168.80.12:8080;
+        proxy_http_version 1.1;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_connect_timeout 300s;
         proxy_read_timeout 300s;
+        proxy_buffering off;
     }
 }
