--- a/dashboard/nginx/nginx.conf
+++ b/dashboard/nginx/nginx.conf
@@ -1,6 +1,14 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen                     80;
+    listen                     [::]:80;
+    listen                     443 ssl;
+    server_name                YOUR_DOMAIN;
+    ssl_protocols              TLSv1.3;
+    ssl_ciphers                ECDHE-ECDSA-AES256-GCM-SHA384;
+    ssl_conf_command           Ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256;
+    ssl_prefer_server_ciphers  off;
+    ssl_certificate            /etc/nginx/sys_certs/YOUR_CERT;
+    ssl_certificate_key        /etc/nginx/sys_certs/YOUR_KEY;
 
     location / {
         proxy_pass http://192.168.80.12:8080;
